@@ -1,3 +1,11 @@
+2004-03-23  Marcus Brinkmann  <marcus@gnu.org>
+
+	* sysdeps/generic/bits/mutex.h (__PTHREAD_MUTEX_INITIALIZER):
+	Remove compound statement.
+	(pthread_mutex_init): Use compound statement with initializer.
+	* pthread/pt-alloc.c (initialize_pthread): Likewise.
+	* sysdeps/generic/pt-mutex-init.c (_pthread_mutex_init): Likewise.
+
 2004-03-19  Marcus Brinkmann  <marcus@gnu.org>
 
 	* sysdeps/l4/bits/pthread-np.h (pthread_pool_add_np,
